# goi-cosmwasm-contracts

./: .gitignore  Cargo.toml  README.md
contracts/application/: Cargo.toml  Developing.md  README.md
contracts/application/examples/: schema.rs
contracts/application/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/cw4-group/: Cargo.toml
contracts/cw4-group/src/: contract.rs
contracts/execution/: Cargo.toml  README.md
contracts/execution/examples/: schema.rs
contracts/execution/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/goi-manager/: Cargo.toml  README.md
contracts/goi-manager/examples/: schema.rs
contracts/goi-manager/schema/: execute_msg.json  goi_manager_query_msg.json  instantiate_msg.json  management_qry_msg.json
contracts/goi-manager/src/: contract.rs  error.rs  lib.rs  msg.rs  queries.rs  state.rs
contracts/goi-manager/ts/: GoiManager.client.ts  GoiManager.types.ts
contracts/group-admin/: Cargo.toml  Publishing.md  README.md
contracts/group-admin/examples/: schema.rs
contracts/group-admin/src/: error.rs  execute.rs  lib.rs  messages.rs  service.rs
contracts/league/: Cargo.toml
contracts/league/examples/: schema.rs
contracts/league/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/managed/: Cargo.toml  NOTICE  README.md
contracts/managed/src/: error.rs  lib.rs  messages.rs  queries.rs  service.rs
contracts/manager/: Cargo.toml  README.md
contracts/manager-hooks/: Cargo.toml  NOTICE  README.md
contracts/manager-hooks/examples/: schema.rs
contracts/manager-hooks/src/: hooks.rs
contracts/manager/src/: error.rs  execute.rs  lib.rs  queries.rs  service.rs
contracts/player/: Cargo.toml  NOTICE  README.md
contracts/player/examples/: schema.rs
contracts/player/schema/: info_response.json  instantiate_msg.json  player.json  query_msg.json
contracts/player/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/player/ts/: Player.client.ts  Player.types.ts
contracts/saleable/: Cargo.toml  README.md
contracts/saleable/.github/workflows/: Basic.yml
contracts/saleable/examples/: schema.rs
contracts/saleable/src/: coin_helpers.rs  error.rs  execute.rs  lib.rs  messages.rs  queries.rs  service.rs
contracts/shared/: Cargo.toml  README.md
contracts/shared/examples/: schema.rs
contracts/shared/src/: error.rs  lib.rs  player_attributes.rs
contracts/shared/src/domain/: application.rs  data.rs  display.rs  goi_manager.rs  league.rs  link_team_player.rs  manage.rs  messaging.rs  player.rs  query_response_info.rs  rewards.rs  saleable.rs  season.rs  task.rs  team.rs
contracts/shared/src/utils/: utils.rs
contracts/task/: Cargo.toml  README.md
contracts/task/examples/: schema.rs
contracts/task/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/team/: Cargo.toml  README.md
contracts/team/examples/: schema.rs
contracts/team/schema/: execute_msg.json  instantiate_team_msg.json  name_response.json  player_response.json  players_response.json  query_msg.json  state.json
contracts/team/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  team_attributes.rs
contracts/tests/: Cargo.toml  NOTICE  README.md
contracts/tests/src/: goi_manager_tests.rs  lib.rs  season_tests.rs  shared_utils.rs  team_tests.rs
