[package]
name = "task"
version = "0.1.0"
authors = ["dshaw <dshaw@mytechies.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-std = { version = "1.1.4" }
cosmwasm-storage = { version = "1.1.4" }
cw-storage-plus = {  version = "0.16.0" }
cw2 = "0.16.0"
cw4 = { version = "0.16.0" }
cw-controllers =  { version = "0.16.0" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = { version = "1.0.26" }
shared = { path = "../shared" }
managed = { path = "../managed" }


[dev-dependencies]
cosmwasm-schema = { version = "1.1.4" }
cw-multi-test = {  version = "0.16.0" }
